Add basic RR tests for several more RR types.
Move basic query test into a separate 'it-works' test.

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -5,6 +5,7 @@ EXTRA_DIST =			\
 	start-daemon		\
 	pid-exists		\
 	daemon-running		\
+	it-works		\
 	basic-rr		\
 	stop-daemon
 
@@ -13,6 +14,7 @@ TESTS =				\
 	start-daemon		\
 	pid-exists		\
 	daemon-running		\
+	it-works		\
 	basic-rr		\
 	stop-daemon
 
