Link with optional libargp, and we now work on FreeBSD 7.1.

--- a/Makefile.am
+++ b/Makefile.am
@@ -11,6 +11,6 @@ INCLUDES	= @GNET_CFLAGS@
 sbin_PROGRAMS	= dvdnsd
 
 dvdnsd_SOURCES	= backend.c dns.c dnsd.h main.c socket.c
-dvdnsd_LDADD	= @GNET_LIBS@ @SQLITE3_LIBS@
+dvdnsd_LDADD	= @GNET_LIBS@ @SQLITE3_LIBS@ @ARGP_LIBS@
 
 EXTRA_DIST	= autogen.sh TODO import-zone.pl mk-dnsdb.sql BIG_FAT_WARNING
